# masters

./: .gitattributes  .gitignore  LICENSE  layer_selection_wide_resnet101_2__IMAGENET1K_V2.csv  main.py  pyproject.toml  resnet_transrate_results.csv
outputs/ood_training/: run_summary.json
papers_code/TransRate/: Demo.ipynb  ReadMe.md
src/: dataset.py  ood.py
src/modelling/: gmm.py  mahobian.py  ood_workflow.py  run_ops_on_saved_features.py
src/transrate/: extract_best_model_features.py  layer_selection.py  model_selection.py  transrate.py
