[project]
name = "masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "torchvision>=0.25.0",
    "umap-learn>=0.5.9.post2",
    "black>=26.3.0",
]
